// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document add component should allow multiple files when passed 1`] = `
<DocumentAdd
  allowMultiple={true}
  name="add-document"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label"
      htmlFor="add-document"
      id="add-document-label"
    >
      <label
        className="govuk-label govuk-label--s"
        htmlFor="add-document"
        id="add-document-label"
      >
        Add document
      </label>
    </label>
    <input
      className="govuk-file-upload"
      id="add-document"
      multiple={true}
      name="add-document"
      onChange={[Function]}
      type="file"
    />
  </div>
</DocumentAdd>
`;

exports[`Document add component should render disabled when passed 1`] = `
<DocumentAdd
  disabled={true}
  name="add-document"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label"
      htmlFor="add-document"
      id="add-document-label"
    >
      <label
        className="govuk-label govuk-label--s"
        htmlFor="add-document"
        id="add-document-label"
      >
        Add document
      </label>
    </label>
    <input
      className="govuk-file-upload"
      disabled={true}
      id="add-document"
      name="add-document"
      onChange={[Function]}
      type="file"
    />
  </div>
</DocumentAdd>
`;

exports[`Document add component should render with correct label when passed 1`] = `
<DocumentAdd
  label="MY_LABEL"
  name="add-document"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label"
      htmlFor="add-document"
      id="add-document-label"
    >
      <label
        className="govuk-label govuk-label--s"
        htmlFor="add-document"
        id="add-document-label"
      >
        MY_LABEL
      </label>
    </label>
    <input
      className="govuk-file-upload"
      id="add-document"
      name="add-document"
      onChange={[Function]}
      type="file"
    />
  </div>
</DocumentAdd>
`;

exports[`Document add component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label"
    for="add-document"
    id="add-document-label"
  >
    <label
      class="govuk-label govuk-label--s"
      for="add-document"
      id="add-document-label"
    >
      Add document
    </label>
  </label>
  <input
    class="govuk-file-upload"
    id="add-document"
    name="add-document"
    type="file"
  />
</div>
`;

exports[`Document add component should render with hint when passed 1`] = `
<DocumentAdd
  hint="MY_HINT"
  name="add-document"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label"
      htmlFor="add-document"
      id="add-document-label"
    >
      <label
        className="govuk-label govuk-label--s"
        htmlFor="add-document"
        id="add-document-label"
      >
        Add document
      </label>
      <span
        className="govuk-hint"
      >
        MY_HINT
      </span>
    </label>
    <input
      className="govuk-file-upload"
      id="add-document"
      name="add-document"
      onChange={[Function]}
      type="file"
    />
  </div>
</DocumentAdd>
`;

exports[`Document add component should render with validation error when passed 1`] = `
<DocumentAdd
  error="MY_ERROR"
  name="add-document"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label"
      htmlFor="add-document"
      id="add-document-label"
    >
      <label
        className="govuk-label govuk-label--s"
        htmlFor="add-document"
        id="add-document-label"
      >
        Add document
      </label>
      <span
        className="govuk-error-message"
        id="add-document-error"
      >
        MY_ERROR
      </span>
    </label>
    <input
      className="govuk-file-upload"
      id="add-document"
      name="add-document"
      onChange={[Function]}
      type="file"
    />
  </div>
</DocumentAdd>
`;
